--- a/sass/style.css
+++ b/sass/style.css
@@ -2517,6 +2517,11 @@ footer .content-footer i {
   margin-right: 15px;
   font-size: 16px;
 }
+footer .content-footer a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: 300;
+}
 footer .content-footer .p-1 {
   padding-left: 5px;
 }
