--- a/sass/style.scss
+++ b/sass/style.scss
@@ -451,8 +451,14 @@ footer{
             margin-right: 15px;
             font-size: 16px;
         }
+        a{
+            color: #fff;
+            text-decoration: none;
+            font-weight: 300;
+        }
         .p-1{
             padding-left: 5px;
+            
         }
     }
     .content-link{
